[gd_scene load_steps=2 format=3 uid="uid://dxnqvnxvnqvnx"]

[ext_resource type="Script" path="res://Scripts/ColumnPuzzleGame.gd" id="1_sm22t"]

[node name="ColumnPuzzleGame" type="Node2D"]
script = ExtResource("1_sm22t")
columns = 2
initial_rows = 8
piece_scene_path = "res://Scenes/ColumnPuzzle/ColumnPuzzlePiece.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="Volver" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Volver"

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Puzzle de Columnas"
horizontal_alignment = 1

[node name="Reiniciar" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Reiniciar"

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Reiniciar" to="." method="_on_reiniciar_pressed"] 